--- a/cv.html
+++ b/cv.html
@@ -20,7 +20,7 @@
 
     <div class="main">
         <div class="left">
-            <h2>Persönliche Datenn</h2>
+            <h2>Persönliche Daten</h2>
             <p> <strong>Name:</strong>Donita Salihi Xheladini</p>
             <p> <strong>Anschrift:</strong>Neue Steige 17</p>
             <p><strong>Telefon:</strong>027253816</p> 
